[gd_scene load_steps=9 format=3 uid="uid://db3lagfeju34i"]

[ext_resource type="Script" uid="uid://biyh4klt0wjg7" path="res://Scripts/UI/dialogue.gd" id="1_msmgm"]
[ext_resource type="Texture2D" uid="uid://d0tbe64g80a2m" path="res://Assets/UI/inventory-slot.png" id="1_tg5y5"]
[ext_resource type="Texture2D" uid="uid://db6utsfxwwvul" path="res://Assets/Character/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Spritesheet.png" id="2_msmgm"]
[ext_resource type="Theme" uid="uid://e6bvrbsl0oqo" path="res://Themes/nameplate_theme.tres" id="3_o8urk"]
[ext_resource type="Texture2D" uid="uid://bmdawhrjubk8y" path="res://Assets/Entities/chomp_idle.png" id="4_ag7w6"]
[ext_resource type="Theme" uid="uid://e24781o5joi4" path="res://Themes/dialogue_theme.tres" id="5_ip23y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_10uok"]
atlas = ExtResource("2_msmgm")
region = Rect2(64, 16, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a4h2"]
atlas = ExtResource("4_ag7w6")
region = Rect2(37, 40, 22, 24)

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msmgm")

[node name="dialogue_base" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.34902)

[node name="player_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 25.0
offset_top = 363.0
offset_right = 225.0
offset_bottom = 613.0

[node name="player_portrait_background" type="TextureRect" parent="dialogue_base/player_base"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("1_tg5y5")

[node name="player_portrait" type="TextureRect" parent="dialogue_base/player_base/player_portrait_background"]
layout_mode = 0
offset_left = 22.0
offset_top = 19.0
offset_right = 172.0
offset_bottom = 169.0
texture = SubResource("AtlasTexture_10uok")

[node name="nameplate" type="TextureRect" parent="dialogue_base/player_base"]
layout_mode = 0
offset_top = 210.0
offset_right = 200.0
offset_bottom = 250.0
texture = ExtResource("1_tg5y5")

[node name="player_name" type="Label" parent="dialogue_base/player_base/nameplate"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 187.0
offset_bottom = 37.0
theme = ExtResource("3_o8urk")
text = "player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="npc_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 929.0
offset_top = 373.0
offset_right = 1129.0
offset_bottom = 623.0

[node name="npc_portrait_background" type="TextureRect" parent="dialogue_base/npc_base"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("1_tg5y5")

[node name="CenterContainer" type="CenterContainer" parent="dialogue_base/npc_base/npc_portrait_background"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 63.0
scale = Vector2(4, 4)

[node name="npc_portrait" type="TextureRect" parent="dialogue_base/npc_base/npc_portrait_background/CenterContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_3a4h2")
stretch_mode = 1

[node name="nameplate" type="TextureRect" parent="dialogue_base/npc_base"]
layout_mode = 0
offset_top = 210.0
offset_right = 200.0
offset_bottom = 250.0
texture = ExtResource("1_tg5y5")

[node name="npc_name" type="Label" parent="dialogue_base/npc_base/nameplate"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 188.0
offset_bottom = 37.0
theme = ExtResource("3_o8urk")
theme_override_font_sizes/font_size = 25
text = "comb bomb"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dialogue_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 240.0
offset_top = 425.0
offset_right = 915.0
offset_bottom = 600.0

[node name="dialogue_background" type="ColorRect" parent="dialogue_base/dialogue_base"]
layout_mode = 0
offset_right = 675.0
offset_bottom = 175.0

[node name="npc_dialogue" type="Label" parent="dialogue_base/dialogue_base/dialogue_background"]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 650.0
offset_bottom = 150.0
theme = ExtResource("5_ip23y")
text = "I, the npc, am talking!"

[node name="player_responses" type="VBoxContainer" parent="dialogue_base/dialogue_base/dialogue_background"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 650.0
offset_bottom = 150.0
theme = ExtResource("5_ip23y")

[node name="option_a" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("5_ip23y")
text = "dialogue option a"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_b" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("5_ip23y")
text = "dialogue option b"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_c" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("5_ip23y")
text = "dialogue option c"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_d" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("5_ip23y")
text = "dialogue option d"
alignment = 0
autowrap_mode = 2
clip_text = true

[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_a" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_b" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_c" to="." method="_on_option_c_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_d" to="." method="_on_option_d_pressed"]
